Video from YouTube

--- a/index.html
+++ b/index.html
@@ -7,48 +7,25 @@
             body {
                 margin: 0px;
             }
-            video {
-                width: 33.33%;
+            iframe {
+                width: 33.32%;
+                height: 50%;
 		float: left;
             }
         </style>
     </head>
     <body>
-        <video controls>
-            <source src="https://drive.google.com/uc?export=download&id=1BWE-NeFHkBfcaflxU6Z2kdzA0QGMkVwT" type="video/mp4">
-        </video>
-        <video controls>
-            <source src="https://drive.google.com/uc?export=download&id=1p88Upw-C_1pXsJeYQIJCUMnMz0wh3epl" type="video/mp4">
-        </video>
-        <video controls>
-            <source src="https://drive.google.com/uc?export=download&id=1hWX4G0vhsk3daJFyYdBwuQCVM9LROeSq" type="video/mp4">
-        </video>
-        <video controls>
-            <source src="https://drive.google.com/uc?export=download&id=1f-yOQAXUdXUlntHa_G2Hvqn6gCSAulpg" type="video/mp4">
-        </video>
-        <video controls>
-            <source src="https://drive.google.com/uc?export=download&id=1WTpg0FQP9YwRsDVoPxnm65RWgJAjNOtS" type="video/mp4">
-        </video>
-        <video controls>
-            <source src="https://drive.google.com/uc?export=download&id=1NXM0wv_Qc9se0gdUed44Y3YruYz3G8Ri" type="video/mp4">
-        </video>
-        <video controls>
-            <source src="https://drive.google.com/uc?export=download&id=1DvQfcWPB3IBiL1ah-ljoU-lDorW5SL8R" type="video/mp4">
-        </video>
-        <video controls>
-            <source src="https://drive.google.com/uc?export=download&id=1Ncuy7ZkmQr5PzkJgSc7jMolEDtkeb2Mn" type="video/mp4">
-        </video>
-        <video controls>
-            <source src="https://drive.google.com/uc?export=download&id=1xTEurtatcBe4lLDH3qrBHXWp9jfW5Eug" type="video/mp4">
-        </video>
-        <video controls>
-            <source src="https://drive.google.com/uc?export=download&id=1SCgFgGxKweuQyGjRxECJEdKRHTDxu2wW" type="video/mp4">
-        </video>
-        <video controls>
-            <source src="https://drive.google.com/uc?export=download&id=1y_vdCQqZoo20ap5DuWvk9uVOuqhxvqZ0" type="video/mp4">
-        </video>
-        <video controls>
-            <source src="https://drive.google.com/uc?export=download&id=1TfCxr8FUCDjptPt9EYQRE6x8rug0bEwL" type="video/mp4">
-        </video>
+        <iframe src="https://www.youtube.com/embed/uMTZJJdpKUU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/JTsXtflrQ6I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/PRk52gwpYVo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/DtPPEB1EZ3o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        
+        <iframe src="https://www.youtube.com/embed/rfessGTA5Z8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/qrrComLIwss" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/STr-QPapaEs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        
+        <iframe src="https://www.youtube.com/embed/FUXRxYRZ-Ag" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/oHxGXJnkiew" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        
+        <iframe src="https://www.youtube.com/embed/Laiick1OBis" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/BT8tB9_umxE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        
+        <iframe src="https://www.youtube.com/embed/TAs-i1RZRgk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </body>
 </html>
